--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Serrapilheira.Rproj
 IntroBayesianStatistics/IntroBayes.md
 .vscode/settings.json
 references/
+CausalInference/.DS_Store
+.DS_Store
+*/.DS_Store
